  and "Date" sub classes, thanks to Mohammed Al-Shehri <moh.alshehri@gmail.com>.
  
* Extend the "Numbers" sub class functionality by add "money2str" method to spell 
  provided price in Arabic idiom by define value, Arabic currency ISO code, and
  language. Thanks to <msme@arabteam2000-forum.com> who developed the first draft.

(*) Add one more method to the "Numbers" sub class to convert Arabic string back into integer.

* Add one more method to the "Mktime" sub class called "hijriMonthDays" returns how many
  days are there in a given Hijri month, thanks to Mr. Mouayed Al-Mohammadi for the idea.
  
* Fix the "Glyphs" sub class bug when renders the shape of the first letter in the input string 
  just like letter in the middle of word! Thanks to Mr. Shady Massalha <massalha@yahoo.com>.
  
* Fix the "Glyphs" sub class bug when we have Tashkeel within لا, لآ, لأ, or لإ which rendered 
  incorrectly by add extra Lam before it, thanks to Mr. Said Bakr <saidbakr2@users.sourceforge.net> 
  who reported this bug and help in fix it.

* Fix the "Glyphs" sub class bug when handle the Arabic letter superscript Alef if it is 
  supported by used the font (i.e. just like what we have in مُوسَىٰ وَعِيسَىٰ) which was presented 
  as Tanween before!

* Extend writing error rules using in the "ArQuery" sub class by add cases to handle
  extended Arabic letters (i.e. ژ, ڨ, پ, چ, گ, and ڪ), thanks to Ammar Abdelhamid 
  <flashpack@gmail.com> who suggest this.

* Reduce the size of the "Salat" sub class by 20%, removed deprecated "getPrayTime" method, 
  that method name is now just an alias of the new "getPrayTime2" method.

* Drop the "pregPattern" method from the main "I18N_Arabic" class, it is too basic to 
  handle it in a standalone method, instead of that users may consult this FAQ page: 
  (http://www.ar-php.org/faq-php-arabic.html#regexp).

  
What's new in ArPHP 3.5.0 (release date: Sep 1, 2012)
-----------------------------------------------------
